--- a/.github/workflows/angular-pipeline.yml
+++ b/.github/workflows/angular-pipeline.yml
@@ -1,4 +1,5 @@
 name: CICD Pipeline - Angular App
+
 on:
   push:
     branches: ["main"]
@@ -24,10 +25,7 @@ jobs:
       - name: Build Angular app
         run: npm run build --prod
 
-    #   - name: Run tests
-    #     run: npm run test -- --watch=false --browsers=ChromeHeadless
-
-      # DOCKER PUSH
+      # OPCIONAL: Docker push si lo sigues usando
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -41,10 +39,17 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Build and push
+      - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
           file: Dockerfile
           push: true
           tags: hmuyba99/personal-wallet:latest
+
+      # NUEVO: Deploy a GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          branch: gh-pages
+          folder: dist/personal-wallet
