--- a/.github/workflows/angular-pipeline.yml
+++ b/.github/workflows/angular-pipeline.yml
@@ -6,8 +6,14 @@ on:
   pull_request:
     branches: ["main"]
 
+# Add permissions for GitHub Pages deployment
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-  ci-cd:
+  build:
     runs-on: ubuntu-latest
     steps:
       - name: VersionControl
@@ -23,7 +29,13 @@ jobs:
         run: npm ci
 
       - name: Build Angular app
-        run: npm run build --prod
+        run: npm run build -- --base-href=/personalWallet/
+
+      # Upload build artifacts for GitHub Pages
+      - name: Upload GitHub Pages artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./dist/personal-wallet
 
       # OPCIONAL: Docker push si lo sigues usando
       - name: Login to Docker Hub
@@ -47,9 +59,14 @@ jobs:
           push: true
           tags: hmuyba99/personal-wallet:latest
 
-      # NUEVO: Deploy a GitHub Pages
+  # Deploy to GitHub Pages
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
       - name: Deploy to GitHub Pages
-        uses: JamesIves/github-pages-deploy-action@v4
-        with:
-          branch: gh-pages
-          folder: dist/personal-wallet
+        id: deployment
+        uses: actions/deploy-pages@v4
