--- a/.github/workflows/angular-pipeline.yml
+++ b/.github/workflows/angular-pipeline.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm ci
 
       - name: Build Angular app
-        run: npm run build -- --base-href=/personalWallet/
+        run: npm run build -- --configuration=production --base-href=/personalWallet/
 
       # Upload build artifacts for GitHub Pages
       - name: Upload GitHub Pages artifact
