--- a/angular.json
+++ b/angular.json
@@ -26,13 +26,7 @@
             ],
             "styles": ["src/styles.css"],
             "scripts": [],
-            "server": "src/main.server.ts",
-            "outputMode": "server",
-            "ssr": {
-              "entry": "src/server.ts"
-            },
-            "baseHref": "/personalWallet/",
-            "outputPath": "dist/personal-wallet"
+            "baseHref": "/personalWallet/"
           },
           "configurations": {
             "production": {
@@ -87,9 +81,6 @@
             "styles": ["src/styles.css"],
             "scripts": []
           }
-        },
-        "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
         }
       }
     }
