fix angular.json and pipeline for ghpages

--- a/angular.json
+++ b/angular.json
@@ -25,8 +25,7 @@
               }
             ],
             "styles": ["src/styles.css"],
-            "scripts": [],
-            "baseHref": "/personalWallet/"
+            "scripts": []
           },
           "configurations": {
             "production": {
