--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-wallet",
+  "name": "personalWallet",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:personalWallet": "node dist/personal-wallet/server/server.mjs"
+    "serve:ssr:personalWallet": "node dist/personalWallet/server/server.mjs"
   },
   "private": true,
   "dependencies": {
