--- a/.github/workflows/angular-pipeline.yml
+++ b/.github/workflows/angular-pipeline.yml
@@ -40,7 +40,7 @@ jobs:
         with:
           path: ./dist/personalWallet/browser
 
-      # OPCIONAL: Docker push si lo sigues usando
+      # push dockerhub 
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
@@ -62,6 +62,7 @@ jobs:
           push: true
           tags: hmuyba99/personal-wallet:latest
 
+  # githubPages deploy
   deploy:
     needs: build
     runs-on: ubuntu-latest
